[metadata]
name = digsigserver
version = 0.15.2
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages = find:
install_requires =
    sanic==23.3.0
    cryptography>=3.1
    tracerite<1.1
    gunicorn==20.1.0


[options.entry_points]
console_scripts =
    digsigserver = digsigserver.scripts.digsigserver:main
